# AI-Agent-Casebook

./: .gitignore  AGENTS.md  AUGUST_2024_RELEASE_NOTES.md  AUGUST_2025_RELEASE_NOTES.md  AUGUST_2025_RELEASE_NOTES_CORRECTED.md  AUGUST_2025_RELEASE_NOTES_FINAL.md  CLAUDE.md  README.md  RELEASE_NOTES_v0.0.1.md  config.ini  langgraph.json  pyproject.toml  requirements.txt  test_suite_correction.txt  video_script_graph.mermaid
app/: main.py  (+6 more)
examples/genai_training_transcript/: .env.example  .gitignore  AI_DEVELOPER_GUIDELINES.md  CLAUDE.md  DELIVERY_SUMMARY.md  INTEGRATION_TEST_GUIDE.md  INTEGRATION_TEST_RESULTS.md  MCP_EVERNOTE_SETUP.md  PR_TEMPLATE.md  README.md  STRICT_JSON_SCHEMA_UPGRADE.md  WORKFLOW_VALIDATION_GUIDE.md  __init__.py  config.yaml  integration_test_editing_team.py  integration_test_editorial_finalizer.py  integration_test_real_datasets.py  integration_test_response_api_file_search.py  issue_template.md  mod1.txt  pyproject.toml  run.py  run.sh  run_mcp_evernote.sh  run_training_manager.py  run_training_manager.sh  syllabus.md  test.sh  test_file_client_loader.py  test_multi_agent_integration.py  test_planner_research_editing_generator.py  test_syllabus_loader.py  test_training_manager.py  test_workflow_integration.py  training_manager.py
examples/genai_training_transcript/agent_sdk_proof_of_concept/: AGENT_SDK_ITERATIONS_ANALYSIS.md  AI_AGENT_LEARNING_EVOLUTION.md  CLEAN_WORKFLOW_README.md  ITERATIONS_RECOVERY_README.md  clean_agent_workflow.py
examples/genai_training_transcript/agent_sdk_proof_of_concept/research_output/: multi_ai_agent_systems_research_mcp.json
examples/genai_training_transcript/cli/: transcript_generator_cli.py
examples/genai_training_transcript/course_agents/: __init__.py  module_list_agent.py  planner_agent.py
examples/genai_training_transcript/data/training_courses/: Building_Systems_with_the_ChatGPT_API.txt  Multi_AI_Agent_Systems.txt  Prompt_Engineering_for_Developers.txt
examples/genai_training_transcript/drafts/: Advanced_Retrieval_for_AI.md  Building_Systems_with_the_ChatGPT_API.md
examples/genai_training_transcript/examples/: knowledge_mcp_example.py  response_api_file_search_example.py
examples/genai_training_transcript/generated_content/: execution_report.json  final_transcript.json  final_transcript.md
examples/genai_training_transcript/generated_content/quality_issues/: advanced_retrieval_for_ai.json  building_systems_with_the_chatgpt_api.json  multi_ai_agent_systems.json  prompt_engineering_for_developers.json  quality_summary.json
examples/genai_training_transcript/integration_tests/: README.md  integration_test_cli_end_to_end.py  integration_test_editing_team.py  integration_test_editorial_finalizer.py  integration_test_real_datasets.py  integration_test_response_api_file_search.py  integration_test_workflow_orchestrator.py  setup_test_data.py  test_quick_validation.py  test_utils.py
examples/genai_training_transcript/mcp-evernote-js-poc/: README.md  index.js  package-lock.json  package.json
examples/genai_training_transcript/mcp-evernote-ts/: README.md  jest.config.js  package.json  tsconfig.json
examples/genai_training_transcript/mcp-evernote-ts/src/: index.ts
examples/genai_training_transcript/mcp-evernote-ts/tests/: index.test.ts
examples/genai_training_transcript/output/: 1:_Prompt_Engineering_for_Developers.md  2:_Advanced_Retrieval_for_AI.md  3:_Multi_AI_Agent_Systems.md  4:_Building_Systems_with_the_ChatGPT_API.md
examples/genai_training_transcript/research_agenda/: course_agenda.md
examples/genai_training_transcript/scripts/: validate_langsmith.py
examples/genai_training_transcript/specifications/: Agentic Content Production- Achieving Narrative Fidelity at Scale.md  C4_Architecture_Mermaid.md  CHECK_LIST_SCRIPT_FINAL.md  Claude_Code_Architecture_Response.md  Claude_Technical_Analysis_Response.md  Codex_Final_Resolution.md  Codex_Sprint_1_Review.md  Complete_Conversation_Analysis.md  Consolidated_Sprint1_Questions - pbi answered.md  Inter_Module_Architecture.md  PBI_Questions_Remaining.md  References.md  Sprint_1_Context_Note.md  Sprint_1_Review_Instructions.md  Sprint_Proposition_Review.md  Sprint_Proposition_Review_pbi_response.md  Team_Review_Response_Comprehensive.md  evernote_integration.md  plan.md  plan_knowledge_database_interface.md  plan_training_manager.md  sprint1.md  sprint2.md  sprint_1.md  sprint_claude_code_knowledge_training.md  team_coordination.md  training_course_format.md  utils_module.md
examples/genai_training_transcript/specifications/sprint_0/: sprint0_1_training_manager.md
examples/genai_training_transcript/specifications/sprint_1/: Codex_Sprint_1_Review.md  Consolidated_Sprint1_Questions.md  sprint_1.md  (+1 more)
examples/genai_training_transcript/sprint_1_catastrophic_failure_analysis/: ARCHITECTURE_VIOLATION_SUMMARY.md  DEEP_INVESTIGATION_CODING_AGENT_FAILURE.md  EMERGENCY_PROCESS_OVERHAUL.md  MIGRATION_PLAN_AGENTS_SDK.md  PROCESS_IMPROVEMENTS.md  ROOT_CAUSE_ANALYSIS.md
examples/genai_training_transcript/src/: __init__.py  run.py  run.sh
examples/genai_training_transcript/tests/: test_course_processing_methods.py  test_editing_team.py  test_editorial_finalizer.py  test_editorial_finalizer_multi_agent_spec.py  test_file_client_loader.py  test_knowledge_bridge.py  test_knowledge_mcp.py  test_langsmith_integration.py  test_mcp_helper_methods.py  test_planner_research_editing_generator.py  test_research_team.py  test_response_api_file_search.py  test_strict_json_schema.py  test_syllabus_loader.py  test_training_course_guidelines.py  test_training_manager.py  test_training_manager_content_accessor.py  test_workflow_orchestrator.py
examples/genai_training_transcript/tools/: editing_team.py  file_client_loader.py  mcp_evernote.py  planner.py  research_team.py  syllabus_loader.py  transcript_generator.py
experiments/mcp-evernote-cc/: ARCHITECTURE.md  CLAUDE.md  MCP_LESSONS_LEARNED.md  MCP_PROJECTS.md  MCP_SCHEMA_ANNOTATED.md  MIGRATION_SUMMARY.md  PLAN_REX_MCP.md  README.md  pyproject.toml
experiments/mcp-evernote-cc/tests/: test_config.py  test_mcp_client.py
(+337 files in other folders)
