[tool.poetry]
name = "customer-onboarding-assistant"
version = "0.1.0"
description = "Project to showcase agentic paradigm on a customer onboarding assistant use case."
authors = ["Pierre Bittner <pierre@bittner.fr>"]
license = "Apache Licence"
readme = "README.md"
# packages = [{ include = "app" }]
packages = [{ include = "customer_onboarding", from = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = "^0.3.14"
langgraph = "^0.2.61"
mistralai = "^1.2.6"
openai = "^1.59.5"
chromadb = "^0.5.21"
langchain-community = "^0.3.14"
langchain-openai = "^0.2.14"
langchain-mistralai = "^0.2.4"
langchain-chroma = "^0.2.0"
langsmith = "^0.2.10"
pytest = "^8.3.4"
bs4 = "^0.0.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain-experimental = "^0.3.4"
protobuf = ">=4.21.12, <5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies.numpy]
version = "1.26.4"
allow-prereleases = true
extras = ["all"]