[tool.poetry]
name = "AI-Agent-Casebook"
version = "0.1.0"
description = "Project to showcase agentic paradigm on several use case."
authors = ["Pierre Bittner <pierre@bittner.fr>"]
license = "Apache Licence"
readme = "README.md"
# packages = [{ include = "app" }]
packages = [{ include = "customer_onboarding", from = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = "^0.3.14"
langgraph = "^0.3.6"
mistralai = "^1.2.6"
openai = "^1.59.7"
chromadb = ">=0.6.3"
langchain-community = "^0.3.14"
langchain-openai = ">=0.3.8"
langchain-mistralai = "^0.2.4"
langchain-chroma = "^0.2.0"
langsmith = ">=0.3.13"
llama-index = "^0.12.11"
llama-index-embeddings-langchain="^0.3.0"
llama-index-llms-mistralai=">=0.4.0"
llama-index-embeddings-mistralai="^0.3.0"
pytest = "^8.3.4"
bs4 = "^0.0.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain-experimental = "^0.3.4"
protobuf = ">=4.21.12, <5.0.0"
langchain-anthropic = "^0.3.9"
langgraph-prebuilt = "^0.1.2"
openai-agents = {extras = ["viz"], version = ">=0.0.9"}
litellm = ">=1.67.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies.numpy]
version = "1.26.4"
allow-prereleases = true
extras = ["all"]

[tool.poetry.dev-dependencies]
pytest-asyncio = ">=0.25.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"