[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "evernote-chatbot"
version = "0.1.0"
description = "Terminal chatbot for Evernote MCP server communication"
authors = ["BittnerPierre <pierre@bittner.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
evernote-chat = "src.evernote_chatbot.main:main"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0"
httpx = "^0.27.0"
rich = "^13.0.0"
typer = "^0.12.0"
pyyaml = "^6.0.2"
mcp = "^1.9.4"
openai-agents = {extras = ["litellm"], version = "^0.2.9"}
openai = "^1.59.7"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
pytest-httpx = "^0.30.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
asyncio_default_fixture_loop_scope = "function"
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"